--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,26 @@
 h1 {
-    font-family: serif;
+    color: #2f4f4f;
+    margin-bottom: 10px;
 }
 
-#page-title {
-    font-family: sans-serif;
+.nav {
+    margin-top: 10px;
+    list-style: none;
+    padding-left: 0;
 }
 
-.title {
-    font-family: monospace;
+.nav li {
+    display: inline-block;
+}
+
+.nav a {
+    color: white;
+    background-color: #13a4a4;
+    padding: 5px;
+    border-radius: 2px;
+    text-decoration: none;
+}
+
+a.featured {
+    background-color: orange;
 }
