--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+    font-family: sans-serif;
+}
+
 h1 {
     color: #2f4f4f;
     margin-bottom: 10px;
@@ -21,6 +25,38 @@ h1 {
     text-decoration: none;
 }
 
-a.featured {
+.nav .featured {
     background-color: orange;
 }
+a:link {
+    color: blue;
+    text-decoration: none;
+}
+
+a:visited {
+    color: teal;
+}
+
+a:hover {
+    text-decoration: underline;
+    color: yellow;
+}
+
+a:active {
+    color: red;
+}
+
+.footer {
+    color: #666;
+    background-color: #ccc;
+    padding: 15px 0;
+    text-align: center;
+    font-size: 14px;
+}
+
+.footer a {
+    text-decoration: underline;
+    color: inherit;
+}
+
+
