--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,7 @@
 :root {
-    font-size: 0.75em;
+    font-size: calc(0.5em + 1vw);
 }
 
-@media(min-width: 800px) {
-    :root {
-        font-size: 0.875em;
-    }
-}
-
-@media(min-width: 1200px) {
-    :root {
-        font-size: 1em;
-    }
-}
 .panel {
     padding: 1em;
     border-radius: 0.5em;
