--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,69 @@
+*,
+::before,
+::after {
+    box-sizing: border-box;
+}
+
+body * + * {
+    margin-top: 1em;
+}
 :root {
-    --main-bg: #fff;
-    --main-color: #000;
     font-size: calc(0.7em + 1vw);
+    --light-blue: #0090C9;
 }
 
-.panel {
-    font-size: 1rem;
-    padding: 1em;
-    border: 1px solid #999;
-    background-color: var(--main-bg);
-    color: var(--main-color);
-
+header {
+    color: #fff;
+    background-color: #0072b0;
+    border-radius: .5em;
+    padding: 0 1.5em;
+    overflow: auto;
 }
 
-.panel > h2 {
+main {
+    display: block;
+}
+
+body {
+    background-color: #eee;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+    display: flex;
+}
+
+.main {
+    background-color: #fff;
+    border-radius: .5em;
+    width: 70%;
+    padding: 1em 1em;
+}
+
+.sidebar {
+    padding: 1.5em;
+    margin-left: 1em;
     margin-top: 0;
-    font-size: 0.8em;
-    font-weight: bold;
+    background-color: #fff;
+    border-radius: .5em;
+    width: 30%;
+}
+
+.button-link {
+    display: block;
+    padding: 0.5em;
+    color: #fff;
+    background-color: var(--light-blue);
+    text-align: center;
+    text-decoration: none;
     text-transform: uppercase;
 }
 
-.dark {
-    --main-bg: #333;
-    --main-color: #ffffff;
-    margin-top: 2em;
-    padding: 1em;
-    background-color: #999;
+
+.sponsor {
+    display: block;
+    color: var(--light-blue);
+    text-align: center;
+    text-decoration: none;
+    
 }
