--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,23 @@
+:root {
+    font-size: calc(0.7em + 1vw);
+    --light-blue: #0090C9;
+    box-sizing: border-box;
+}
+
 *,
 ::before,
 ::after {
-    box-sizing: border-box;
+    box-sizing: inherit;
+}
+body {
+    background-color: #eee;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body * + * {
     margin-top: 1em;
 }
-:root {
-    font-size: calc(0.7em + 1vw);
-    --light-blue: #0090C9;
-}
+
 
 header {
     color: #fff;
@@ -20,50 +27,57 @@ header {
     overflow: auto;
 }
 
-main {
-    display: block;
-}
 
-body {
-    background-color: #eee;
-    font-family: Arial, Helvetica, sans-serif;
-}
+
 
 .container {
-    display: flex;
+    max-width: 1080px;
+    margin: 0 auto;
 }
 
 .main {
     background-color: #fff;
     border-radius: .5em;
-    width: 70%;
     padding: 1em 1em;
 }
 
-.sidebar {
-    padding: 1.5em;
-    margin-left: 1em;
-    margin-top: 0;
-    background-color: #fff;
+.media {
+    float: left;
+    width: calc(50% - 1em);    
+    padding: 1em;
+    background-color: pink;
     border-radius: .5em;
-    width: 30%;
+    margin: 0 0 1em 0;
 }
 
-.button-link {
-    display: block;
-    padding: 0.5em;
-    color: #fff;
-    background-color: var(--light-blue);
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
+.media:nth-child(2n+1) {
+    margin-right: 1em;
 }
 
+.clearfix::before,
+.clearfix::after {
+    display: table;
+    content: " ";
+}
 
-.sponsor {
-    display: block;
-    color: var(--light-blue);
-    text-align: center;
-    text-decoration: none;
-    
+.clearfix::after {
+    clear: both;
+}
+
+.media:nth-child(odd) {
+    clear: left;
+}
+
+.media-image {
+    float: left;
+    margin-right: 1em;
+}
+
+.media-body {
+    margin-top: 0;
+    overflow: auto;
+}
+
+.media-body h4 {
+    margin-top: 0;
 }
