--- a/grid/styles.css
+++ b/grid/styles.css
@@ -1,13 +1,202 @@
-.grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr ;
-    grid-gap: .5em;
+:root {
+    box-sizing: border-box;
 }
 
-.grid > * {
-    background-color: darkgray;
+*,
+::before,
+::after {
+    box-sizing: inherit;
+}
+
+body {
+    background-color: #709b90;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: repeat(4, auto);
+    grid-gap: 1.5em;
+    max-width: 1080px;
+    margin: 0 auto;
+}
+
+header ,
+nav {
+    grid-column: 1 / 3;
+    grid-row: span 1;
+}
+
+.main {
+    grid-column: 1 / 2;
+    grid-row: 3 / 5;
+}
+
+.sidebar-top {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+}
+.sidebar-bottom {
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+}
+
+.tile {
+    padding: 1em;
+    background: #fff;
+    border: .4em solid rgb(103, 179, 143);
+}
+
+.tile > :first-child {
+    margin-top: 0;
+}
+
+.tile * + * {
+    margin-top: 1em;
+}
+
+.page-heading {
+    margin: 0;
+}
+
+.site-nav {
+    display: flex;
+    margin: 0;
+    padding: .5em;
+    background-color: #5f4b44;
+    list-style-type: none;
+    border-radius: .2em;
+}
+
+.site-nav > li {
+    margin-top: 0;
+}
+
+.site-nav > li > a {
+    display: block;
+    padding: .5em 1em;
+    background-color: #cc6b5a;
     color: white;
-    padding: 2em;
-    border-radius: .5em;
+    text-decoration: none;
+    border-radius: .25em;
+}
+
+.site-nav > li + li {
+    margin-left: 1em;
+}
+
+.site-nav > .nav-right {
+    margin-left: auto;
+}
+
+
+.flex {
+    display: flex;
+}
+
+.flex > * + * {
+    margin-top: 0;
+    margin-left: 1em;
+}
+.tile {
+    background-color: #fff;
+    padding: 1em;
+}
+
+.column-main {
+    flex: 70%;
+    background-color: blue;;
+}
+
+.column-sidebar {
+    flex: 30%;
+    background-color: yellow;
+    display: flex;
+    flex-direction: column;
+}
+
+.column-main2 {
+    flex: 1;
+    background: peru;
+}
+
+.column-sidebar2 {
+    flex: 0 0 100px;
+    background-color: plum;
+}
+
+p {
+    font-size: 1.2em;
+}
+
+.login {
+    flex: 1;
+}
+
+.pricing {
+    flex: 1;
+}
+
+.login-form h1 {
+    margin: 0;
+    font-size: .9em;
+    font-weight: bold;
+    text-align: right;
+    text-transform: uppercase;
+}
+
+.login-form input:not([type=checkbox]):not([type=radio]) {
+    display: block;
+    width: 100%;
+    margin-top: 0;
+}
+
+.login-form button {
+    margin-top: 1em;
+    border: 1px solid #cc6b5a;
+    padding: .5em 1em;
+    background-color: white;
+    cursor: pointer;
+}
+
+.centered {
+    text-align: center;
+}
+
+.cost {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cost > span {
+    margin-top: 0;
+    font-weight: bold;
+}
+
+.cost-heading {
+    text-transform: uppercase;
+}
+.cost-currency {
+    font-size: 2em;
+}
+
+.cost-dollars {
+    font-size: 4em;
+}
+
+.cost-cents {
+    align-self: start;
+    font-size: 2em;
+}
+
+.cta-button {
+    background: chocolate;
+    width: 100%;
+    color: white;
+    display: block;
+    text-decoration-line: none;
+    padding-top: .25em;
+    padding-bottom: .25em;
 }
