--- a/grid/styles.css
+++ b/grid/styles.css
@@ -15,8 +15,10 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: repeat(4, auto);
+    grid-template-columns: [main-start page-start] 2fr 
+        [main-end sidebar-start] 1fr
+        [sidebar-end page-end];
+    grid-template-rows: repeat(4, [row] auto);
     grid-gap: 1.5em;
     max-width: 1080px;
     margin: 0 auto;
@@ -24,22 +26,22 @@ body {
 
 header ,
 nav {
-    grid-column: 1 / 3;
+    grid-column: page;
     grid-row: span 1;
 }
 
 .main {
-    grid-column: 1 / 2;
-    grid-row: 3 / 5;
+    grid-column: main;
+    grid-row: row 3 / span 2;
 }
 
 .sidebar-top {
-    grid-column: 2 / 3;
-    grid-row: 3 / 4;
+    grid-column: sidebar;
+    grid-row: row 3 / span 1;
 }
 .sidebar-bottom {
-    grid-column: 2 / 3;
-    grid-row: 4 / 5;
+    grid-column: sidebar;
+    grid-row: row 4 / span 1;
 }
 
 .tile {
