--- a/positioning/styles.css
+++ b/positioning/styles.css
@@ -71,3 +71,68 @@ button {
     text-indent: 0;
     content: "\00D7";
 }
+
+.container {
+    margin: 2em auto;
+    max-width: 1000px;
+    width: 80%;
+    border: 2px solid lime;
+}
+
+.dropdown {
+    display: inline-block;
+    position: relative;
+}
+
+.dropdown-label {
+    padding: .5em 1.5em;
+    border: 1px solid #ccc;
+    background-color: #eee;
+}
+
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 2.2em;
+    min-width: 100%;
+    background-color: #eee;
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
+}
+
+.submenu {
+    padding-left: 0;
+    margin: 0;
+    list-style-type: none;
+    border: 1px solid #999;
+}
+
+.submenu > li + li {
+    border-top: 1px solid #999;
+}
+
+.submenu > li > a {
+    display: block;
+    padding: .5em 1.5em;
+    background-color: #efee;
+    color: rgb(12, 108, 204);
+    text-decoration-line: none;
+}
+
+.submenu > li > a:hover {
+    background-color: #fff;
+}
+/* .item {
+    padding: 1em;
+    border: 5px solid brown;
+    margin: 1em;
+} */
+
+.relative {
+    position: relative;
+    left: 1em;
+    top: 2em;
+}
