--- a/responsive/styles.css
+++ b/responsive/styles.css
@@ -37,6 +37,12 @@ a:active {
     position: relative;
 }
 
+@media(min-width: 35em) {
+    .page-header {
+        padding: 1em;
+    }
+}
+
 .title > h1 {
     color: #333;
     text-transform: uppercase;
@@ -44,10 +50,23 @@ a:active {
     margin: .2em 0;
 }
 
+@media (min-width: 35em) {
+    .title > h1 {
+        font-size: 2.5rem;
+        margin: 0;
+    }
+}
+
+
 .slogan {
     color: rgb(49, 47, 47);
     font-size: .875em;
     margin: 0;
+}
+@media(min-width: 35em) {
+    .slogan {
+        font-size: 1.1em;
+    }
 }
 
 .hero {
@@ -59,8 +78,21 @@ a:active {
     text-shadow: .1em .1em .3em black;
 }
 
+@media(min-width: 35em) {
+    .hero {
+        padding: 5em 3em;
+        font-size: 1.2rem;
+    }
+}
+
 main {
     padding: 1em;
+}
+
+@media(min-width: 35em) {
+    main {
+        padding: 2em 1em;
+    }
 }
 
 .subtitle {
@@ -85,6 +117,12 @@ main {
     overflow: hidden;
 }
 
+@media (min-width: 35em) {
+    .menu-toggle {
+        display: none;
+    }
+}
+
 .menu-toggle::after {
     position: absolute;
     color: black;
@@ -102,6 +140,13 @@ main {
     margin: 0;
 }
 
+@media(min-width: 35em) {
+    .menu-dropdown {
+        display: block;
+        position: static;
+    }
+}
+
 .is-open .menu-dropdown {
     display: block;
 }
@@ -111,13 +156,25 @@ main {
     padding-left: 0;
     border: 1px solid #ccc;
     list-style: none;
-    background-color: black;
+    background-color: rgba(1, 0, 0, .75);;
     color: white;
+}
+
+@media(min-width: 35em) {
+    .nav-menu {
+        display: flex;
+        border: 0;
+        padding: 0 1em;
+        justify-content: space-between;
+        margin-top: .5em;
+    }
 }
 
 .nav-menu > li + li {
     border-top: 1px solid #ccc;
 }
+
+
 
 .nav-menu > li > a {
     display: block;
@@ -126,3 +183,43 @@ main {
     font-weight: normal;
     font-size: 1rem;
 }
+
+@media(min-width: 35em) {
+    .nav-menu > li + li {
+        border: 0;
+    }
+
+    .nav-menu > li > a {
+        padding: .3em;
+    }
+}
+
+@media(min-width: 35em) {
+    .row { 
+        display: flex;
+        margin-left: -.75em;
+        margin-right: -.75em;
+    }
+
+    .column {
+        flex: 1;
+        margin-right: .75em;
+        margin-left: .75em;
+        background-color: rgba(1, 0, 0, .75);
+        color: white;
+        border-radius: .25em;
+        padding: .5em;
+    }
+
+    .column > h2 {
+        text-align: center;
+        font-size: 1.1em;
+    }
+
+    .column-1,
+    .column-3 {
+        margin-top: 1.5em;
+        margin-bottom: 1.5em;
+    }
+}
+
